# karpathy-course-tutor

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  product-thesis.md
examples/: agent-skill-run.md  eval-set.json  learner-state.json  sanitized-tutor-loop.md
skill/ai-tutor-bot/: SKILL.md
skill/ai-tutor-bot/agents/: openai.yaml
skill/ai-tutor-bot/references/: state-schema.md  teaching-patterns.md
skill/karpathy-course-tutor/: SKILL.md
skill/karpathy-course-tutor/agents/: openai.yaml
skill/karpathy-course-tutor/references/: course-map.md  state-schema.md
source-packs/karpathy-ai-systems/: course-map.md
src/ai_tutor_bot/: __init__.py  catalog.py  cli.py  engine.py  progress.py  state.py
src/karpathy_course_tutor/: __init__.py  catalog.py  cli.py  state.py
src/karpathy_course_tutor/data/: course_map.json
tests/: test_catalog.py  test_cli.py  test_engine.py  test_eval_set.py  test_progress.py  test_public_surface.py  test_state.py
