[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-tutor-bot"
version = "0.1.0"
description = "A proactive, source-grounded AI tutor loop for preserving continuity in interrupted self-study."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yimeng Jia" }]
keywords = ["ai-tutor", "agent-skill", "self-directed-learning", "proactive-ai", "karpathy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = []

[project.urls]
Repository = "https://github.com/cheryljia27-commits/ai-tutor-bot"
Issues = "https://github.com/cheryljia27-commits/ai-tutor-bot/issues"

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
ai-tutor-bot = "ai_tutor_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_tutor_bot"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_tutor_bot/data/course_map.json" = "ai_tutor_bot/data/course_map.json"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
